--- a/main.css
+++ b/main.css
@@ -4,19 +4,18 @@
     box-sizing: border-box;
 }
 
-.body {
-    overflow: hidden;
-}
 
 .purple {
-    float: left;
-    width: 4%;
-    height: 100vh;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 96%;
     background-color: rgb(54, 13, 54);
 }
 
 .container-fluid {
-    float: left;
+    margin-left: 4%;
     width: 95.5%;
 }
 
@@ -30,6 +29,7 @@
 .header {
     height: 15vh;
     border-bottom: 1px solid black;
+    margin-bottom: 8vh;
     position: relative;
 }
 
@@ -126,4 +126,33 @@
     border-bottom: none;
     text-align: center;
     cursor: pointer;
+}
+
+.charts {
+    margin-bottom: 1.5vh;
+    position: relative;
+}
+
+#container1, #container2, #container3, #container4, #container5, #container6, #container7, #container8 {
+    border: 1px solid black;
+    width: 102%;
+    margin: auto;
+    height: 300px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 9px 0px rgba(84, 81, 173, 1);
+}
+.transfered {
+    position: absolute;
+    bottom: -4%;
+    right: 3%;
+    font-size: 10.5px;
+    color: grey;
+}
+svg {
+    overflow: visible;
+}
+
+.highcharts-container {
+    overflow: visible !important;
 }
