--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@
     bottom: 1%;
     left: 50%;
     width: 50%;
+    z-index: 99999;
 }
 
 .days {
@@ -75,6 +76,7 @@
     text-align: center;
     font-size: 11px;
     cursor: pointer;
+    position: relative;
 }
 
 .reset {
@@ -289,6 +291,80 @@ svg {
     cursor: pointer
 }
 
+.date-wrapper {
+    position: absolute;
+    top: 120%;
+    left: -95%;
+    padding: 8px;
+    background-color: black;
+    width: 190%;
+    color: white;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.apply-date {
+    width: 25%;
+    padding: 1% 5%;
+    cursor: pointer;
+    float: right;
+    border: 1px solid white;
+    border-radius: 15px;
+    margin-top: 30px;
+}
+
+.pick-date1, .pick-date2 {
+    float: left;
+    width: 45%;
+    margin-left: 2.5%;
+}
+
+.month-wrapper1, .month-wrapper2 {
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.month-wrapper1>i.month-wrapper2>i {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.month-wrapper1>i {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.month-wrapper2>i {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.days-in-week1, .days-in-week2 {
+    overflow: hidden;
+}
+
+.days-in-week1>div, .days-in-week2>div {
+    float: left;
+    width: 14.2%;
+    text-align: center;
+}
+
+.date-in-calendar1, .date-in-calendar2 {
+    overflow: hidden;
+}
+
+.date-in-calendar1>div, .date-in-calendar2>div {
+    float: left;
+    width: 14.2%;
+    padding: 1% 0;
+    cursor: pointer;
+    border: 1px solid white;
+}
+
 @media screen and (min-width:576px) {
     .search {
         width: 50%;
@@ -319,10 +395,17 @@ svg {
         transform: translate(-50%, -50%);
         width: 40%;
     }
+    .day1, .day7 {
+        padding: 1px 0;
+    }
     .reset {
         top: 40%;
         transform: translate(0, -50%);
         width: 20%;
+        padding: 1px 0;
+    }
+    .date-wrapper {
+        left: -45%;
     }
 }
 
@@ -334,12 +417,23 @@ svg {
         width: 30%;
         font-size: 15px;
     }
+    .day1, .day7 {
+        padding: 2px 0;
+    }
+    .date {
+        font-size: 13px;
+    }
     .reset {
         width: 12%;
         font-size: 15px;
+        padding: 2px 0;
     }
     .export-wrapper {
         font-size: 14px;
+    }
+    .date-wrapper {
+        left: -20%;
+        width: 140%;
     }
 }
 
@@ -361,5 +455,8 @@ svg {
     .pick-graphs {
         left: 15%;
         width: 10%;
+    }
+    .day1, .day7, .reset {
+        padding: 2.5px 0;
     }
 }
