--- a/graphs.css
+++ b/graphs.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f3efef;
+}
+
+.graphs {
+    min-width: 300px;
+    display: block;
+}
+
 .filter {
     position: absolute;
     top: 50%;
@@ -16,12 +25,13 @@
 }
 
 .viewing-data {
-    min-width: 300px;
     position: absolute;
     top: 5%;
     left: 10px;
-    background-color: white;
-    z-index: -1;
+    background-color: white !important;
+    width: 135px;
+    height: 63px;
+    border-radius: 10px;
 }
 
 .typed {
@@ -38,7 +48,6 @@
 
 .info {
     margin-top: -25px;
-    margin-right: 60px;
     margin-left: 5px;
 }
 
@@ -110,13 +119,18 @@
     font-size: 20px;
     font-weight: bold;
     border-bottom: 1px solid grey;
+    min-width: 300px;
+    background-color: #f4eded !important;
 }
 
 .header {
+    min-height: 100px;
     height: 18vh;
+    min-width: 300px;
     border-bottom: 1px solid black;
     margin-bottom: 8vh;
     position: relative;
+    background-color: #f4eded !important;
 }
 
 .search {
@@ -134,6 +148,8 @@
     border: none;
     border: 1px solid blue;
     border-radius: 15px;
+    font-size: 13px;
+    background-color: #f4eded;
 }
 
 .mac-wrapper, .contract-wrapper {
@@ -301,6 +317,7 @@ svg {
     color: black;
     overflow: hidden;
     border-radius: 10px;
+    display: none;
 }
 
 .apply-date {
@@ -379,20 +396,25 @@ svg {
         top: 23%;
         left: 63%;
     }
+    input[type=text] {
+        font-size: 14.5px;
+        padding: 3px;
+    }
     .apply {
         font-size: 14.5px;
     }
     .viewing-data {
         width: 25%;
+        font-size: 11px !important;
     }
     .currently {
-        font-size: 13.5px
+        font-size: 13px !important;
     }
     .grey {
         font-size: 13.5px;
     }
     .typed {
-        font-size: 13.5px;
+        font-size: 12px !important;
     }
     .days-wrapper {
         top: 55%;
@@ -404,7 +426,7 @@ svg {
         padding: 1px 0;
     }
     .reset {
-        top: 40%;
+        top: 50%;
         transform: translate(0, -50%);
         width: 20%;
         padding: 1px 0;
@@ -416,6 +438,14 @@ svg {
 }
 
 @media screen and (min-width: 768px) {
+    input[type=text] {
+        font-size: 17px;
+    }
+    .viewing-data {
+        width: 22%;
+        font-size: 11px !important;
+    }
+
     .currently, .grey, .typed {
         font-size: 15px;
     }
@@ -438,8 +468,8 @@ svg {
         font-size: 14px;
     }
     .date-wrapper {
-        left: -20%;
-        width: 140%;
+        left: -55%;
+        width: 210%;
     }
 }
 
@@ -462,7 +492,14 @@ svg {
         left: 15%;
         width: 10%;
     }
+    .viewing-data {
+        width: 18%;
+    }
     .day1, .day7, .reset {
         padding: 2.5px 0;
+    }
+    .date-wrapper {
+        left: -20%;
+        width: 140%;
     }
 }
