--- a/tables.css
+++ b/tables.css
@@ -3,12 +3,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-/* .tables{
-    margin-left: 0.5%; 
-} */
-.tables{
-    display:none;
-}
+
 .card-color {
     overflow: hidden;
     background-color: white;
@@ -17,23 +12,26 @@
     height: 30px;
     position: relative;
     margin-top: 5px;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
-    width: 110%;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
 }
-.card-color-wrapper{
-    border-radius: 10px;
+
+.card-color-wrapper {
+    border-radius: 7px;
     margin-top: 5px;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
+    background-color: white;
 }
-.card-color-wrapper> .card-color{
+
+.card-color-wrapper>.card-color {
     height: 30px;
     overflow: hidden;
     background-color: white;
     position: relative;
     margin-top: 0;
-    border-radius: 5px;
+    border-radius: 7px;
     box-shadow: none;
 }
+
 .card-color>p {
     float: left;
     color: blue;
@@ -42,7 +40,7 @@
     position: absolute;
     top: 50%;
     left: 5px;
-    transform: translate(0,-50%);
+    transform: translate(0, -50%);
 }
 
 .bigger-then-others {
@@ -50,16 +48,24 @@
 }
 
 .colored-div {
-    float: right;
     color: white;
     font-size: 12px;
-    border-radius: 10px;
+    border-radius: 7px;
     width: 20%;
     text-align: center;
     position: absolute;
     top: 50%;
     right: 5px;
-    transform: translate(0,-50%);
+    transform: translate(0, -50%);
+}
+
+.colored-no-div {
+    font-size: 12px;
+    position: absolute;
+    top: 50%;
+    right: 7px;
+    transform: translate(0, -50%);
+    color: grey;
 }
 
 .orange {
@@ -72,4 +78,137 @@
 
 .red {
     background-color: rgb(204, 54, 54);
+}
+
+.card-color-2 {
+    border-radius: 7px;
+    padding: 3px 3.5px;
+    margin-top: 5px;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
+    background-color: white;
+    overflow: hidden;
+}
+
+.card-color-2>p {
+    color: blue;
+    font-size: 13.5px;
+    font-weight: bold;
+}
+
+.card-color-float {
+    float: left;
+    width: 45%;
+    overflow: hidden;
+}
+
+.card-color-float>p {
+    float: left;
+    font-size: 13px;
+}
+
+.card-color-float>div {
+    float: right;
+    width: 65%;
+    border-radius: 7px;
+    text-align: center;
+    color: white;
+    font-size: 13px;
+}
+
+.card-color-float-second {
+    float: right;
+    margin-right: 15px;
+}
+
+.no-bold {
+    font-weight: normal;
+}
+
+.bold {
+    font-weight: bold;
+    color: blue;
+    padding: 3px;
+}
+
+.retracted {
+    right: 14px;
+}
+
+.card-multi-wrapper {
+    background-color: white;
+    border-radius: 7px;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.75);
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.card-multi-wrapper>p {
+    padding: 0 8px;
+    color: blue;
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.top, .bottom {
+    padding: 0 8px;
+    overflow: hidden;
+}
+
+.bottom {
+    padding: 0 4px;
+    background-color: rgb(83, 208, 250);
+}
+
+.main {
+    float: left;
+    width: 38%;
+    border-right: 1px solid grey;
+    font-size: 13px;
+    margin-right: 5%;
+}
+
+.others {
+    float: left;
+    width: 14%;
+    padding: 3px 0;
+    font-size: 12px;
+    text-align: center;
+    color: grey;
+}
+
+.chart-wrapper {
+    margin-bottom: 20px;
+}
+
+.table-column-3, .table-column-4 {
+    margin-top: 10px;
+}
+
+#container9, #container10, #container11, #container12, #container13, #container14, #container15, #container16 {
+    height: 120px;
+}
+
+@media screen and (min-width:768px) {
+    .table-column-1 {
+        padding-top: 0.5%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .table-column-3, .table-column-4 {
+        margin-left: 0px;
+    }
+    .table-column-4 {
+        padding-top: 0.8%;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .chart-wrapper {
+        width: 110%;
+    }
+    .table-column-3, .table-column-4 {
+        padding-top: 0.8%;
+        margin-top: 0;
+    }
 }
